# optimizetrades

./: README.md
optimizetrades/: README.md  pyproject.toml  requirements.txt
optimizetrades/optimizetrades/: __init__.py
optimizetrades/optimizetrades/api/: __init__.py  main.py
optimizetrades/optimizetrades/app/: streamlit_app.py
optimizetrades/optimizetrades/constraints/: __init__.py  base.py  sector_cap.py  weight_bounds.py
optimizetrades/optimizetrades/data/: __init__.py  market_data.py
optimizetrades/optimizetrades/optimization/: __init__.py  qp_markowitz.py  result_objects.py  solver_interface.py
optimizetrades/tests/: test_markowitz.py
